<resources>
    <string name="app_name">LeafHunterDevelopment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="welcome_message">Hello Plant lovers!</string>
    <string name="weekly_stats_ready">56+</string>
    <string name="plants_identified">Rosemary\nSpruce\nCardomon\n</string>
    <string name="plants">Sage\nSeaGrass\nBirch</string>
    <string name="weekly_progress">Your weekly progress is almost complete!</string>
    <string name="this_week">This Week</string>
    <string name="saved_collection">Saved Collection\n</string>
    <string name="saved">Saved\n</string>
    <string name="news_updates">News Updates</string>
    <string name="news_banner">Blah blah blah news</string>
    <string name="news_sample_title">New Plants discovered in Finland!</string>
    <string name="weekly_highlights">Weekly Highlights\n</string>
    <string name="app_logo">App logo</string>
    <string name="collection">Collection</string>
    <string name="my_collection">My Collection</string>
    <string name="tab_all_plants">All Plants</string>
    <string name="tab_collections">Collections</string>
    <string name="tab_favorites">Favorites</string>
    <string name="filter_plants">Filter Plants</string>
    <string name="add_new_plant">Add new plant</string>
    <string name="todo">TODO</string>
    <string name="timestamp">Timestamp</string>
    <string name="description">Description</string>
    <string name="plant_name">Plant Name</string>
</resources>