<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/signInFragment">

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.leafhunterdevelopment.ui.signin.SignInFragment"
        android:label="Sign In"
        tools:layout="@layout/fragment_sign_in" />

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.leafhunterdevelopment.ui.signup.SignUpFragment"
        android:label="Sign Up"
        tools:layout="@layout/fragment_sign_up" />

    <fragment
        android:id="@+id/navigationHome"
        android:name="com.example.leafhunterdevelopment.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigationDashboard"
        android:name="com.example.leafhunterdevelopment.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigationNotifications"
        android:name="com.example.leafhunterdevelopment.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>